--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# kruitvat
+------------
+| kruitvat |
+------------
 
 # drug enforcement administration
 https://en.wikipedia.org/wiki/Drug_Enforcement_Administration
