--- a/README
+++ b/README
@@ -2,6 +2,10 @@
 | kruitvat |
 ------------
 
+
+# cannabidiol
+https://en.wikipedia.org/wiki/Cannabidiol
+
 # drug enforcement administration
 https://en.wikipedia.org/wiki/Drug_Enforcement_Administration
 
