--- a/README
+++ b/README
@@ -2,6 +2,11 @@
 | kruitvat |
 ------------
 
+'cbd olie'
+
+
+# kruitvat
+https://en.wikipedia.org/wiki/Kruidvat
 
 # cannabidiol
 https://en.wikipedia.org/wiki/Cannabidiol
